# ProjectAutomationProto

./: .gitignore  README.md  pyproject.toml
misc/: 00_00_pyaudio_test.py  00_01_get_audio_data.py  01_00_whisper_test.py  02_00_aws_transcribe_api_test.py  03_00_aws_transcribe_api_stream_test.py  03_01_aws_transcribe_api_realtime_test.py  05_01_aws_bedrock_claude_converse.py  05_02_aws_bedrock_claude_conversestream.py  05_03_aws_bedrock_claude_invokemodel.py  05_04_aws_bedrock_claude_invokemodel_withresponsestream.py  06_01_coeirolink_api_check.html
misc/03_02_realtime_audio_recognition/: app.py
misc/03_02_realtime_audio_recognition/templates/: index.html
misc/03_03_realtime_audio_recognition_on_browser_recording/: README.md  app.py.txt
misc/03_03_realtime_audio_recognition_on_browser_recording/templates/: index.html
openai_realtime_api_test/: README.md  example_1.js  example_2.js  example_3.js  index_realtime_client.js  index_websocket.js  index_websocket_2.js  package-lock.json  package.json
realtime_llm/: package-lock.json  package.json
realtime_llm/backend/: package-lock.json  package.json  tsconfig.json
realtime_llm/backend/src/: server.ts
realtime_llm/frontend/: index.html  package-lock.json  tsconfig.json  vite.config.ts
realtime_llm/frontend/public/: audio-processor.js
realtime_llm/frontend/src/: client.ts
realtime_recognition/: README.md  package-lock.json
realtime_recognition/backend/app/: main.py
realtime_recognition/backend/static/: index.html
realtime_recognition/frontend/: index.html  vite.config.ts
realtime_recognition/frontend/public/: processor.js
realtime_recognition/frontend/src/: main.ts
