[tool.poetry]
name = "projectautomationproto"
version = "0.1.0"
description = ""
authors = ["2Nike2 <29421346+2Nike2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
sounddevice = "^0.5.0"
numpy = "^2.1.1"
pydub = "^0.25.1"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
