[tool.poetry]
name = "projectautomationproto"
version = "0.1.0"
description = ""
authors = ["2Nike2 <29421346+2Nike2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
sounddevice = "^0.5.0"
numpy = "^2.1.1"
pydub = "^0.25.1"
pyaudio = "^0.2.14"
openai = "^1.47.0"
python-dotenv = "^1.0.1"
boto3 = "^1.35.24"
aiofile = "^3.8.8"
amazon-transcribe = "^0.6.2"
flask = "^3.0.3"
flask-socketio = "^5.3.7"
eventlet = "^0.37.0"
gunicorn = "^23.0.0"
flask-cors = "^5.0.0"
fastapi = "^0.115.0"
jinja2 = "^3.1.4"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
